--- a/home/enterprise-view.html
+++ b/home/enterprise-view.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="enterprise-view">Enterprise View</h1>
 
-<p>This section provides an overview of what the TCD solution is, and how it fits in with the wider Temenos and bank enterprise.</p>
+<p>This section provides an overview of what the Temenos Continuous Deployment Platform solution is, and how it fits in with the wider Temenos and bank enterprise.</p>
 <p><img src="images/enterprise-view.png" alt=""></p>
 <p><strong>Note:</strong> </p>
 <p><strong><em>UTP</em></strong> <em>is the Unified Temenos Platform, an exclusively internal Temenos program and an umbrella term for work related to improving the way we develop, build, test and release software.</em></p>
