--- a/home/extend.html
+++ b/home/extend.html
@@ -97,8 +97,8 @@
 <li>Import selected 3rd party solution</li>
 </ul>
 <h2 id="extend-proposition">Extend Proposition:</h2>
-<p>Temenos Cloud Extend gives you the ability to leverage the extensive list of published Temenos APIs to integrated to other systems, make commercially differentiating system extensions and engage in the Fintech ecosystem. Temenos Cloud Extend gives you access to cloud based, self-provisioned, self-managed environments populated with configurable and scalable Temenos software. Test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
-<p>Extend is designed and built for specific needs of the banking and financial service industry, and comes with the full support of the Temenos Cloud team, whether or not you use the Temenos Cloud or a self-provided cloud subscription.</p>
+<p>The Extend module gives you the ability to leverage the extensive list of published Temenos APIs to integrated to other systems, make commercially differentiating system extensions and engage in the Fintech ecosystem. Extend provides you access to cloud based, self-provisioned, self-managed environments populated with configurable and scalable Temenos software. Test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
+<p>Extend is designed and built for specific needs of the banking and financial service industry, and comes with the full support of the Temenos SaaS team, whether or not you use the Temenos SaaS or a self-provided cloud subscription.</p>
 <p><br></p>
               <hr>
               
