--- a/home/techguides/customize-templates.html
+++ b/home/techguides/customize-templates.html
@@ -90,7 +90,7 @@
 <div class="NOTE"><h5>Note</h5><p>This guide presumes that a environment is already created and available under an Organisation for which the templates customization functionality is allowed.</p>
 </div>
 <h2 id="boost-your-environment">Boost your environment</h2>
-<p>To start customizing your environment built using a Temenos Cloud template, login to Temenos Continuous Deployment platform using your organisation user, go to your environment page and click on the <strong>Boost</strong> button attached to <strong>Repository</strong> application.</p>
+<p>To start customizing your environment built using a Temenos Continuous Deployment Platform template, login to Temenos Continuous Deployment platform using your organisation user, go to your environment page and click on the <strong>Boost</strong> button attached to <strong>Repository</strong> application.</p>
 <p><img src="images/customize-templates-button.png" alt="boost 1"></p>
 <p>After clicking the Boost button, you will receive a notification message - &#39;Customize your scripts&#39; - referring to this user guide and agreeing with the action.</p>
 <p>The message &#39;Repository boosting initiated!&quot; appears on the screen and the status of Repository application is changed to <span style="color:orange">Boosting</span>, as per bellow picture. The operation triggered by the Boost button will copy in environment repository all the template files used to create the environment.
