--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="introduction">Introduction</h1>
 
-<p>This document can be used by technical staff who need to create Users on the Temenos Cloud Platfrom and associate to each user a ssh key. </p>
+<p>This document can be used by technical staff who need to create Users on the Temenos Continuous Deployment Platform and associate to each user a ssh key. </p>
 <h2 id="users"><strong>Users</strong></h2>
 <hr>
 <p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. This way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
