--- a/home/faq.html
+++ b/home/faq.html
@@ -85,7 +85,7 @@
 <ul>
 <li><strong>How can a customer gain access to Deployment Platform?</strong></li>
 </ul>
-<p>The client should go through the normal procurement process for a Temenos Cloud service.  Temenos regional sales. </p>
+<p>The client should go through the normal procurement process for a Temenos SaaS service.  Temenos regional sales. </p>
 <ul>
 <li><strong>What are the minimum system requirements?</strong></li>
 </ul>
@@ -97,7 +97,7 @@
 <ul>
 <li><strong>Who will handle customers’ queries/issues for Deployment Platform?</strong></li>
 </ul>
-<p>Sales queries will be handled via the Temenos Cloud (CloudPlatformSupport@temenos.com) support team. Support is available through a dedicated online support portal for cloud infrastructure issues.  All Product issues remain through the Temenos Customer Support. </p>
+<p>Sales queries will be handled via the Temenos SaaS (CloudPlatformSupport@temenos.com) support team. Support is available through a dedicated online support portal for cloud infrastructure issues.  All Product issues remain through the Temenos Customer Support. </p>
 <p><br></p>
               <hr>
               
