--- a/home/techguides/index.html
+++ b/home/techguides/index.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="technical-guides">Technical Guides</h1>
 
-<p>Here you have access to online documentation to help you develop and test the integration of your products through the Temenos Development Platform provided by Temenos Cloud.</p>
+<p>Here you have access to online documentation to help you develop and test the integration of your products through the Temenos Development Platform provided by Temenos SaaS.</p>
 <p><br></p>
               <hr>
               
