--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <article class="content wrap" id="_content" data-uid="">
 
 <p><span style="color:#010466;font-weight:1000;font-size:24pt">Welcome to Temenos Continuous Deployment</span></p>
-<p><strong>Temenos Continuous Deployment</strong> is a suite of products offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem. </p>
+<p><strong>Temenos Continuous Deployment</strong> is an offering that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem. </p>
 <p><br></p>
 <p><img src="images/arrow.png" align="left" width="37" height="37"> &nbsp; <span style="background-color: #dcf0f4;color:#010466;font-weight:1000;font-size:20pt">Benefits</span> </p>
 <ul>
@@ -104,7 +104,7 @@
 &nbsp;
 &nbsp;
 <span style="color:#010466;font-weight:1000;font-size:16pt">Extend</span></p>
-<p>The Extend module of the TCD is used by the ‘change the bank’ teams for self-service management of Environments and provides access to the tools for enhancing Temenos solutions.  The Extend module is an online software portal, which enables authorised Extends to provision Environments from a list of Templates.  These Environments are for non-production use during development, test, integration, implementation, phases and ongoing changes to the Products.  Self service provisioning of Environments, within minutes rather than weeks, can help accelerate development and ongoing change.  Temenos is able to create production like Templates for any of the Temenos Product Suites (Retail, Corporate, Wealth, Micro-Finance, and Islamic Banking).  This production like Environments enable the Client to develop and test more realistically at proof of concept, demonstrate more representative enhancements across their teams, and perform more life-like scenarios within training.  The speed, reliability, and agility of these Environments will instantly add value to Client’s implementation of Temenos Products and scale your project delivery capacity.  </p>
+<p>The Extend module of the Temenos Continuous Deployment Paltform is used by the ‘change the bank’ teams for self-service management of Environments and provides access to the tools for enhancing Temenos solutions.  The Extend module is an online software portal, which enables authorised Extends to provision Environments from a list of Templates.  These Environments are for non-production use during development, test, integration, implementation, phases and ongoing changes to the Products.  Self service provisioning of Environments, within minutes rather than weeks, can help accelerate development and ongoing change.  Temenos is able to create production like Templates for any of the Temenos Product Suites (Retail, Corporate, Wealth, Micro-Finance, and Islamic Banking).  This production like Environments enable the Client to develop and test more realistically at proof of concept, demonstrate more representative enhancements across their teams, and perform more life-like scenarios within training.  The speed, reliability, and agility of these Environments will instantly add value to Client’s implementation of Temenos Products and scale your project delivery capacity.  </p>
 <p>Service Definition - Find out more <span style="color:#010466;font-weight:1000;font-size:14pt"><a href="home/extend.html" target="blank"><strong>here</strong></a></span>.</p>
 <p>&nbsp;
 &nbsp;
@@ -117,7 +117,7 @@
 <p><br></p>
 <p><img src="images/arrow.png" align="left" width="37" height="37"> &nbsp; <span style="background-color: #dcf0f4;color:#010466;font-weight:1000;font-size:16pt">Technical Overview</span></p>
 <p>This section shows the current state deployment architecture of the TCD  platform.</p>
-<p>The deployment allows for some orgs to be hosted within the Temenos cloud and others to be hosted on the Customer&#39;s Azure subscription.</p>
+<p>The deployment allows for some organisations to be hosted within the Temenos SaaS and others to be hosted on the Customer&#39;s Azure subscription.</p>
 <p><img src="images/deployment-architecture.png" alt="">
 <em>Figure : Deployment View</em></p>
 <p><br></p>
