--- a/docfx_project/site/home/Legal.html
+++ b/docfx_project/site/home/Legal.html
@@ -107,9 +107,9 @@ A secure ftp (SFTP) client is required to download exported log files and data f
 <h2 id="support-and-slas">Support and SLAs</h2>
 <ul>
 <li>Initial support mechanism: email CloudPlatformSupport@temenos.com</li>
-<li>Future state support mechanism: Temenos cloud ticketing system</li>
+<li>Future state support mechanism: Temenos SaaS ticketing system</li>
 <li>SLAs: target 99% Uptime (can go down for maintenance, business hours)</li>
-<li>Warranties: Other SLAs as per Temenos Cloud</li>
+<li>Warranties: Other SLAs as per Temenos SaaS</li>
 <li>Data retention: as defined in the Service Definition – data &amp; environments can be deleted immediately by the user.  All client-related data &amp; environments will be deleted by Temenos 60 days after the termination of the agreement.</li>
 </ul>
 <h2 id="definitions">Definitions</h2>
