--- a/docfx_project/site/home/overview.html
+++ b/docfx_project/site/home/overview.html
@@ -81,10 +81,8 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="what-is-temenos-continuous-deployment"><strong>What is Temenos Continuous Deployment?</strong></h2>
 
-<p>Temenos Continuous Deployment is a product within the Temenos Cloud suite, and is cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand, unless otherwise stated. Temenos Continuous Deployment enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud. Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allows you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
-<p>What is Temenos Continuous Deployment?
-Temenos Continuous Deployment is an offering from Temenos Cloud that provides client individuals and teams with the ability to manage, configure and assemble client licensed Temenos Software – either fully deployed and supported by Temenos Cloud or utilising the client’s own cloud infrastructure.</p>
-<h2 id="the-temenos-cloud-offering"><strong>The Temenos Cloud Offering</strong></h2>
+<p>Temenos Continuous Deployment is a cloud based infrastructure used during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand, unless otherwise stated. Temenos Continuous Deployment enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud. Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allows you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
+<p>Temenos Continuous Deployment is an offering that provides client individuals and teams with the ability to manage, configure and assemble client licensed Temenos Software – either fully deployed and supported by Temenos SaaS or utilising the client’s own cloud infrastructure.</p>
 <p><img src="images/cloud-offering.png" alt=""></p>
 <h2 id="temenos-continuous-deployment"><strong>Temenos Continuous Deployment</strong></h2>
 <p><img src="images/tcd.png" alt=""></p>
@@ -96,7 +94,7 @@ Temenos Continuous Deployment is an offering from Temenos Cloud that provides cl
 <hr>
 <p><strong>Self-service environment provisioning</strong></p>
 <ul>
-<li>An authenticated user, e.g. a developer or tester, has the ability to request an environment from the catalogue of <a href="temenos-cloud-templates.html">templates</a>; this template will be materialised into compute, storage, and networks on the Temenos Cloud. See <a href="architecture.html">architecture</a>. The  administrator, e.g. the project manager, is in  control of number of the users and maximum number of running environments, thus having total control of the platform and its usage.</li>
+<li>An authenticated user, e.g. a developer or tester, has the ability to request an environment from the catalogue of <a href="temenos-cloud-templates.html">templates</a>; this template will be materialised into compute, storage, and networks on the Temenos SaaS See <a href="architecture.html">architecture</a>. The  administrator, e.g. the project manager, is in  control of number of the users and maximum number of running environments, thus having total control of the platform and its usage.</li>
 </ul>
 <p><strong>Secure configuration and environment management</strong></p>
 <ul>
@@ -126,7 +124,7 @@ Temenos Continuous Deployment is an offering from Temenos Cloud that provides cl
 <p>An environment is an instance of an application and the platform provides the facilities to manage the application configuration.</p>
 <p><strong>Organisations</strong></p>
 <p>The users of the platform can provision and manage the environments within their Organisation.</p>
-<p>Please check <a href="techguides/environment-creation-in-paas.html"><strong>here</strong></a> for more details about Temenos Cloud management of Organisations and Environments.</p>
+<p>Please check <a href="techguides/environment-creation-in-paas.html"><strong>here</strong></a> for more details about Temenos SaaS management of Organisations and Environments.</p>
 <p><strong>Templates</strong></p>
 <p>Environments can be provisioned using a variety of pre-defined application, processing, storage, network, and operating system configurations. Please check <a href="temenos-cloud-templates.html"><strong>here</strong></a> for more details. </p>
 <h2 id="data-and-security-considerations"><strong>Data and Security Considerations</strong></h2>
