--- a/docfx_project/site/home/techguides/components-products.html
+++ b/docfx_project/site/home/techguides/components-products.html
@@ -81,9 +81,9 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="components--feature-description">Components – Feature Description</h1>
 
-<p>Components are individually deployable units that are understood by TCP (Temenos Cloud Platform) based on the component type that each component refers to. </p>
-<p>Each component is associated to a component type to help TCP deploy the component. </p>
-<p>The <strong>Component Type</strong> field in the component data is the key to help the TCP Controllers deploy the right components in the right way. 
+<p>Components are individually deployable units that are understood by Temenos Continuous Deployment Platform based on the component type that each component refers to. </p>
+<p>Each component is associated to a component type to help Temenos Continuous Deployment Platform deploy the component. </p>
+<p>The <strong>Component Type</strong> field in the component data is the key to help the Temenos Continuous Deployment Platform Controllers deploy the right components in the right way. 
 An organization can define as many components as needed but should have all mandatory components defined in the templates that are assigned to the organization.</p>
 <p>Practically when a template is assigned to an organization, a list of component types related to that template is added for that organization.</p>
 <p>Each component has the following fields <em>(all mandatory)</em>:</p>
@@ -107,7 +107,7 @@ An organization can define as many components as needed but should have all mand
 <li>Tafj-installer etc.</li>
 </ul>
 <p>Each item in this list is called a <strong>component type</strong>. </p>
-<p>The names of these parts / Component Types are fixed and are not user editable. This is managed internally by the TCP admin/ development group and can only be changed or modified by this group. </p>
+<p>The names of these parts / Component Types are fixed and are not user editable. This is managed internally by the Temenos Continuous Deployment Platform admin/ development group and can only be changed or modified by this group. </p>
 <p>Each component type represents a deployable unit and has an ansible script associated to it. </p>
 <p>These components have a structure associated and work in a standardized manner across different deployment stacks (OS, App server variations, DB variations etc).</p>
 <h2 id="how-to-set-up-delete-components">How to Set Up/ Delete Components</h2>
