--- a/docfx_project/site/home/techguides/fcm-configuration.html
+++ b/docfx_project/site/home/techguides/fcm-configuration.html
@@ -81,13 +81,13 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="configure-fcm-application">Configure FCM Application</h1>
 
-<p>Learn how to use FCM application by accessing it via Temenos Cloud Platform.</p>
+<p>Learn how to use FCM application by accessing it via Temenos Continuous Deployment Platform.</p>
 <div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=XBsmOZvg-z8" target="_blank"><strong>Video tutorial</strong> - to be updated.
 </a></p>
 </div>
 <h2 id="about-fcm-template">About FCM Template</h2>
 <ul>
-<li>Login to your organization on the Temenos Cloud Platform (<a href="https://portal.temenos.cloud/">https://portal.temenos.cloud/</a>) using the username and password provided by the Temenos team</li>
+<li>Login to your organization on the Temenos Continuous Deployment Platform (<a href="https://portal.temenos.cloud/">https://portal.temenos.cloud/</a>) using the username and password provided by the Temenos team</li>
 <li>Each time you login, you must accept the Privacy Notice in order to have access to the portal</li>
 <li>Click the <strong>Templates Catalog</strong> on the left-side menu<ul>
 <li>Choose <strong>the FCM template</strong> version from the available list to see the short description of the components and also the full template content</li>
