--- a/home/techguides/create-publish-template.html
+++ b/home/techguides/create-publish-template.html
@@ -155,7 +155,18 @@
 <li>click Create.</li>
 </ul>
 <p><img src="images/create-template-factory.png" alt=""></p>
-<p><em>To see all the steps on how to create a factory, please also check the following</em> <a href="factories.html" target="blank">user guide</a>.</p>
+<p><em>To see all the steps on how to create a factory, please also check the following</em> <a href="factories.html" target="blank">user guide</a>.
+<em>To see all the steps on how to run a factory, please also check the following</em> <a href="run-factory.html" target="blank">user guide</a>.</p>
+<p>If the factory run is successful, the below will be displayed on the screen:</p>
+<p><img src="images/successful-factory-run.png" alt=""></p>
+<h2 id="see-the-new-environment">See the new environment</h2>
+<p>Expand the left side menu and click on &#39;Environments&#39;. You will see the enviroment that was created following the successful factory run:</p>
+<p><img src="images/factory-run-environment.png" alt=""></p>
+<h2 id="create-and-publish-the-new-template-after-the-successful-factory-run">Create and Publish the New Template after the Successful Factory Run</h2>
+<p>Click on the newly created environment. On the right side of the page click on &#39;Save as a new template&#39;. Type in the Template Name and a brief description. </p>
+<p><img src="images/save-new-template.png" alt=""></p>
+<p>To see the new template, go to the Templates Catalogue tab. Your template is now available in your templates list.</p>
+<p><img src="images/new-template.png" alt=""></p>
 <p><br></p>
               <hr>
               
