--- a/home/toc.html
+++ b/home/toc.html
@@ -233,6 +233,9 @@
                         <li>
                           <a href="run-factory-video.html" name="" title="Run Factory">Run Factory</a>
                         </li>
+                        <li>
+                          <a href="./create-publish-new-template.md" name="" title="Create &amp; Publish a New Template after a Successful Factory Run">Create &amp; Publish a New Template after a Successful Factory Run</a>
+                        </li>
                       </ul>  </li>
                 </ul>  </li>
             <li>
