--- a/home/techguides/create-publish-template.html
+++ b/home/techguides/create-publish-template.html
@@ -82,7 +82,7 @@
 <h1 id="how-to-create-and-publish-a-new-template-after-a-successful-factory-run">How to Create and Publish a New Template after a Successful Factory Run</h1>
 
 <p>This feature offers the possibility to baseline a particular version of a product and create a template from that version. Further anybody will be able to create an environment with the baselined version of the product.</p>
-<h1 id="set-up-the-factory-prerequisites">Set up the Factory prerequisites:</h1>
+<h1 id="prerequisites-to-set-up-the-factory">Prerequisites to set up the Factory:</h1>
 <h1 id="1-check-metadata-on-the-portal">1. Check Metadata on the portal</h1>
 <ul>
 <li>Login to the portal with your credentials.</li>
