--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -207,6 +207,9 @@
                           <a href="techguides/run-factory.html" name="" title="Run a Factory with &quot;Run Now&quot; Button and Dashboard">Run a Factory with &quot;Run Now&quot; Button and Dashboard</a>
                         </li>
                         <li>
+                          <a href="techguides/create-publish-template.html" name="" title="Create &amp; Publish a New Template after a Successful Factory Run">Create &amp; Publish a New Template after a Successful Factory Run</a>
+                        </li>
+                        <li>
                           <a href="techguides/artifactory-test-cycle.html" name="" title="Manage Artifactory Test Cycle">Manage Artifactory Test Cycle</a>
                         </li>
                       </ul>  </li>
