--- a/docfx_project/site/home/techguides/fcm-configuration.html
+++ b/docfx_project/site/home/techguides/fcm-configuration.html
@@ -175,6 +175,14 @@
 When disconnecting and re-connecting to the server, the <strong>input</strong> folder will be empty.</p>
 </div>
 <p><img src="images/fcm-drag-message.png" alt="drag message"></p>
+<p> If you receive the &#39;Permission denied - Error code 3&#39; notification when trying to move the message, please follow the below steps in WinSCP:</p>
+<ul>
+<li>Go to options, then Preferences</li>
+<li>Click on Transfer, then select Default and Edit 
+<img src="images/winscp-error1.png" alt="drag message"></li>
+<li>Select the ignore permission errors
+<img src="images/winscp-error2.png" alt="drag message"></li>
+</ul>
 <h2 id="check-the-messages-in-transaction-alert-manager">Check the Messages in Transaction Alert Manager</h2>
 <ul>
 <li>Go to the portal to your environment</li>
