--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -111,7 +111,7 @@
 <p>•   Login to your organisation portal using the link and the credentials provided.</p>
 <p><img src="images/user-login.png" alt="portal login"></p>
 <p>•   Go to the menu on the left and then click Users tab, as below:</p>
-<p><img src="images/users-tab.png" alt="new user"></p>
+<p><img src="./images/users-tab.png" alt="new user"></p>
 <p>The first screen that you will see is the one for the existing user (usually admin).</p>
 <p>Click <strong>New user</strong> button on the top-right corner:</p>
 <p><img src="images/user-new.png" alt="new user"></p>
