--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -111,10 +111,10 @@
 <p>•   Login to your organisation portal using the link and the credentials provided.</p>
 <p><img src="images/user-login.png" alt="portal login"></p>
 <p>•   Go to the menu on the left and then click Users tab, as below:</p>
-<p><img src="./images/users-tab.png" alt="new user"></p>
+<p><img src="images/users-tab.png" alt="new user"></p>
 <p>The first screen that you will see is the one for the existing user (usually admin).</p>
 <p>Click <strong>New user</strong> button on the top-right corner:</p>
-<p><img src="images/user-new.png" alt="new user"></p>
+<p><img src="./images/user-new.png" alt="new user"></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
 <p><strong>Create a new user:</strong></p>
 <div class="NOTE"><h5>Note</h5><p>All fields are mandatory!
